add posts/id/comments endpoints, update swagger, add tests
