# src/features/posts/api/router.ts
@@ -7,6 +7,8 @@ export const PostsRouter = Router();
 const PostsController = {
     getAllPosts: RequestHandlers.getAllPostsHandler,
     getPostById: RequestHandlers.getPostByIdHandler,
+    getAllCommentsByPostId: RequestHandlers.getAllCommentsByPostIdHandler,
+    createCommentByPostId: RequestHandlers.createCommentByPostIdHandler,
     createPost: RequestHandlers.createPostHandler,
     updatePostById: RequestHandlers.updatePostByIdHandler,
     deletePostById: RequestHandlers.deletePostByIdHandler,
@@ -14,6 +16,8 @@ const PostsController = {
 
 PostsRouter.get('/', ...Validators.getValidators, PostsController.getAllPosts);
 PostsRouter.get('/:id', ...Validators.getByIdValidators, PostsController.getPostById);
+PostsRouter.get('/:id/comments', ...Validators.getAllCommentsByPostIdValidator, PostsController.getAllCommentsByPostId);
+PostsRouter.post('/:id/comments', ...Validators.createCommentByPostIdValidator, PostsController.createCommentByPostId);
 PostsRouter.post('/', ...Validators.postValidators, PostsController.createPost);
 PostsRouter.put('/:id', ...Validators.updateValidators, PostsController.updatePostById);
 PostsRouter.delete('/:id', ...Validators.deleteValidators, PostsController.deletePostById);
